--- a/dashboard.html
+++ b/dashboard.html
@@ -70,19 +70,13 @@
         <img src="micon.png" alt="" class="leftmic" />
       </div>
       <div class="rtside">
-        <div class="diabox">
-          <div class="rows" id="t1">Aadhaar Centres</div>
-          <hr />
-          <div class="rows" id="t2">Bhuvan 2D</div>
-          <hr />
-          <div class="rows" id="t3">Bhuvan API</div>
-          <hr />
-          <div class="rows" id="t4">NRSC/ISRO open Data</div>
-          <hr />
-          <div class="rows" id="t5">Bhuvan Tourism</div>
-        </div>
         <div class="ques">
-          <div class="q" id="j"><p>Hi, how are You?</p></div>
+          <div class="q" id="j">
+            <p>
+              Hi,I am Antriksh ,automated voice bot .Click on Mic to start
+              conversation
+            </p>
+          </div>
           <!-- <div class="ans">your answer will be displayed here .</div> -->
         </div>
       </div>
