--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       <div class="head">
         <div class="logo">IBOT</div>
         <div class="option1">
-          <u>TOADY'S &nbsp;HIGHLIGHT</u>
+          <a href="highlights.html" target="_parent">
+            <u>TOADY'S &nbsp;HIGHLIGHT</u></a
+          >
         </div>
         <div class="option2">
           <a href="features.html" target="_parent"><u>FEATURES</u></a>
